# mechgaia-benchmark

./: .gitignore  AGENTBEATS_SETUP_COMPLETE.md  AGENTBEATS_SUBMISSION_CHECKLIST.md  Dockerfile  Dockerfile.free  Dockerfile.launcher  Dockerfile.uv  PARTICIPANT_REQUIREMENTS.md  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_FIX.md  README.md  README.rendered.md  SUBMISSION_QUICKSTART.md  TASK_INDEX.md  agent_card.toml  agentbeats_config.py  agentbeats_main.py  agentbeats_main_backup.py  config.py  demo_white_agent.py  docker-compose.prod.yml  docker-compose.yml  example_usage.py  green_agent.py  init.sql  launcher.py  leaderboard_api.py  local_test.py  mechgaia_metrics.db  metrics_system.py  nginx.conf  pyproject.toml  railway-launcher.json  railway.json  references.yaml  render.yaml  requirements.txt  run.sh  run_benchmark.py  (+8 more)
a2a/: agent.py  protocol.py  transport.py
agents/: __init__.py  green_agent_base.py  level1_stress_task.py  level2_shaft_design_task.py  level3_plate_optimization_task.py
config/: __init__.py  llm_config.py  white_agent_config.py
demo_submissions/: level1_correct.json  level1_incorrect.json  level2_correct.json  level2_incorrect.json  level3_correct.json  level3_incorrect.json
docs/: AGENTBEATS_SETUP.md  AGENTBEATS_SETUP_COMPLETE.md  CLEANUP_SUMMARY.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MCP_A2A_INTEGRATION.md  MIGRATION_GUIDE.md  OLLAMA_TESTING.md  QUICKSTART.md  REASONING_EVALUATION_GUIDE.md  REASONING_EVALUATION_QUICKREF.md  RENDER_DEPLOYMENT.md  RENDER_FIX.md  SUBMISSION_QUICKSTART.md  SYSTEM_REQUIREMENTS.md  WHITE_AGENT_AGENTBEATS_CONNECTION.md  WHITE_AGENT_CONTROLLER_URL.md
examples/: a2a_example.py  llm_usage_example.py  mcp_example.py  reasoning_evaluation_example.py  simple_usage.py
examples/submissions/: example_level1.json  example_level2.json  example_level3.json
green_agents/: green_agent_base.py  level1_stress_task.py  level2_shaft_design_task.py  level3_plate_optimization_task.py
llm_providers/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  factory.py  generic_provider.py  ollama_provider.py  openai_provider.py
local_a2a/: __init__.py  broker.py
local_mcp/: __init__.py  protocol.py
mcp/: client.py  server.py
scripts/: deploy.sh  deploy_production.sh  deploy_uv.sh  prepare_commit.sh  setup_agentbeats.sh  test_ollama.sh  verify_agent.py
tasks/level2/: material_database.csv
tasks/level3/: mounting_plate_initial.step  mounting_plate_modified.step
tests/: test_agentbeats_integration.py  test_mechgaia.py  test_simple_white_agent.py
utils/: __init__.py  cad_verifier.py  reasoning_evaluator.py  render_citations.py  safe_runner.py  semantic_similarity.py
white_agents/: __init__.py  simple_white_agent.py
