[project]
name = "mechgaia-benchmark"
version = "0.1.0"
description = "MechGAIA: A Green Agent and Benchmark for Evaluating Mechanical Engineering Design AI Agents."
authors = [
    { name = "Kurt Walter Soncco Sinchi", email = "kurtwal98@berkeley.edu" },
    { name = "Sheza Saiyed", email = "sheza@berkeley.edu"},
    { name = "Haokun Zheng", email = "haokun.zheng@berkeley.edu"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]

# Core dependencies for running the benchmark
dependencies = [
    "pandas",
    "numpy",
    "sympy", 
    
    # CAD Integration
    "cadquery", 
    
    # AgentBeats SDK
    "agentbeats",
    "earthshaker",  # Requires Python >=3.13
    
    # Web API and Metrics
    "fastapi",
    "uvicorn",
    "redis",
    "sqlalchemy",
    "psycopg2-binary",
    "flask",
    "flask-cors",
    
    # LLM Providers (optional - install as needed)
    # "openai>=1.0.0",  # For OpenAI provider
    # "anthropic>=0.18.0",  # For Anthropic/Claude provider
    "requests>=2.31.0",  # For Ollama, Deepseek, and generic providers
    "litellm",  # For unified LLM API (used by white agent)
    
    # A2A and MCP
    "aiohttp>=3.9.0",  # For async HTTP and WebSocket transport
]

[project.optional-dependencies]
# Dependencies for running tests or development tasks
dev = [
    "pytest",
    "ruff",
]


[tool.uv]
# This section can be used for uv-specific configurations if needed in the future.